appgw/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
spec:
  selector:
    matchLabels:
      app: my-nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
      - name: my-nginx
        image: nginx
        ports:
        - containerPort: 80
      volumeMounts:
      - name: secrets-mount
        mountPath: "/mnt/secrets-store"
        readOnly: true
    volumes:
      - name: secrets-mount
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "unit-keyvault"
          nodePublishSecretRef:                       # Only required when using service principal mode
            name: secrets-store-creds
---
apiVersion: v1
kind: Service
metadata:
  name: my-nginx
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: my-nginx
